option java_package = "lreis.bigdata.indoor.index.coprocessor";

option java_outer_classname = "BuildMacIndex";
option java_generic_services = true;
option optimize_for = SPEED;

message buildMacIndexRequest{
}

message buildMacIndexResponse {
optional int64 rowCount = 1;
}


service BuildMacIndexService {
 rpc buildMacIndex(buildMacIndexRequest)
 returns(buildMacIndexResponse);
}